// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can be stack of conditional prompts > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`can be stack of conditional prompts > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`can be stack of conditional prompts > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`parameter defaults to custom settings > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`parameter defaults to custom settings > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`parameter defaults to custom settings > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`parameter settings overrides default settings > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`parameter settings overrides default settings > tty 1`] = `[]`;

exports[`parameter settings overrides default settings > tty strip ansi 1`] = `[]`;

exports[`prompt can be enabled by default > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be enabled by default > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`prompt can be enabled by default > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does match > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does match > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does match > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does not match > args 1`] = `[ErrorMissingArgument: Missing argument for flag "b".]`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does not match > tty 1`] = `[]`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does not match > tty strip ansi 1`] = `[]`;

exports[`prompt is disabled by default > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`prompt is disabled by default > tty 1`] = `[]`;

exports[`prompt is disabled by default > tty strip ansi 1`] = `[]`;
